tests/fail/non_tco_op.stderr
error: unreachable expression
 --> $DIR/non_tco_op.rs:4:40
  |
4 |         fac_with_acc(n - 1, acc * n) + 5
  |         ----------------------------   ^ unreachable expression
  |         |
  |         any code following this expression is unreachable
  |
note: the lint level is defined here
 --> $DIR/non_tco_op.rs:1:1
  |
1 | #[tco::rewrite]
  | ^^^^^^^^^^^^^^^
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
